--- a/askthedoc.html
+++ b/askthedoc.html
@@ -117,6 +117,25 @@
 			// color palett generator https://mycolor.space/?hex=%23010C28&sub=1
 			// svg editor: https://boxy-svg.com/app
 
+			async function compressData(data) {
+				const stream = new Blob([JSON.stringify(data)]).stream();
+				const compressionStream = stream.pipeThrough(new CompressionStream("gzip"));
+				const buffer = await new Response(compressionStream).arrayBuffer();
+				return btoa([].reduce.call(new Uint8Array(buffer), (p, c) => p + String.fromCharCode(c), ''));
+			}
+
+			async function decompressData(base64) {
+			    const binaryString = atob(base64);
+			    const bytes = new Uint8Array(binaryString.length);
+			    for (let i = 0; i < binaryString.length; i++) {
+			        bytes[i] = binaryString.charCodeAt(i);
+			    }
+				const stream = new Blob([bytes]).stream();
+				const decompressionStream = stream.pipeThrough(new DecompressionStream("gzip"));
+				const buffer = await new Response(decompressionStream).arrayBuffer();
+				return JSON.parse(new TextDecoder().decode(new Uint8Array(buffer)));
+			}
+
 			async function scrapeDoc() {
 				const articleUrl = document.getElementById('zendeskArticleUri').value;
 				const openAIAPIKey = document.getElementById('openAIAPIKey').value;
@@ -131,10 +150,30 @@
 
 				const articles = await scrapePage(document.getElementById('zendeskArticleUri').value);
 				await addEmbeddings(articles, openAIAPIKey);
-				localStorage.setItem("articles", JSON.stringify(articles));
+				const compressed = await compressData(articles);
+				localStorage.setItem("articles", compressed);
 
 				console.log('done')
 			}
+
+			function element2Markdown(node, chunks) {
+				node.childNodes.forEach(childNode => {
+					if (childNode.nodeType === Node.TEXT_NODE) {
+						chunks[0] += childNode.textContent;
+					}
+					if (['H1', 'H2'].includes(childNode.nodeName) && chunks[0].length > 512) {
+						chunks.unshift('');
+					}
+					switch (childNode.nodeName) {
+						case 'H1': chunks[0] += `# ${childNode.textContent}\n\n`; break;
+						case 'H2': chunks[0] += `## ${childNode.textContent}\n\n`; break;
+						case 'H3': chunks[0] += `### ${childNode.textContent}\n\n`; break;
+						case 'li': chunks[0] += `- ${childNode.textContent}\n\n`; break;
+						default: element2Markdown(childNode, chunks);
+					}
+				});
+			}
+
 			async function scrapePage(url) {
 				const articles = [];
 				console.log('scraping', url);
@@ -148,15 +187,22 @@
 				}
 
 				// TODO: split articles into chunks of more than 500 characters
-				articles.push(...json.articles
+				json.articles
 					.filter(article => typeof article.body === 'string' && article.body.length < 8000)
-					.map(article => ({
-						"id": article.id,
-						"title": article.title,
-						"body": article.body,
-						"url": article.url
-					}))
-				);
+					.forEach(article => {
+						const parser = new DOMParser();
+						const doc = parser.parseFromString(article.body, 'text/html');
+						const chunks = [''];
+						doc.body.childNodes.forEach(node => element2Markdown(node, chunks));
+						chunks.map(chunk => {
+							articles.push({
+								id: article.id,
+								title: article.title,
+								body: chunk.trim(),
+								url: article.url
+							})
+						})
+					});
 
 				if (typeof json.next_page === 'string') {
 					articles.push(...await scrapePage(json.next_page));
@@ -196,11 +242,32 @@
 			}
 
 			async function askQuestion() {
-				const articles = JSON.parse(localStorage.getItem("articles"));
+				const articles = await decompressData(localStorage.getItem("articles"));
 
 				const question = document.querySelector('.question input').value;
 				const apiKey = document.getElementById('openAIAPIKey').value;
-				const embedding = await getEmbedding(question, apiKey);
+
+				const hallucinatedResponse = await fetch("https://api.openai.com/v1/completions", {
+					method: "POST",
+					headers: {
+						'Content-Type': "application/json",
+						Authorization: `Bearer ${apiKey}`,
+					},
+					body: JSON.stringify({
+						model: "gpt-3.5-turbo-instruct",
+						temperature: 1.2,
+						max_tokens: 2048,
+						prompt: question
+					}),
+				});
+
+				let hallucinatedAnswer = '';
+				if (hallucinatedResponse.ok) {
+					const data = await hallucinatedResponse.json();
+					hallucinatedAnswer = data.choices[0].text;
+				}
+
+				const embedding = await getEmbedding(`${question}\n\n${hallucinatedAnswer}`, apiKey);
 
 				articles.forEach(article => article.distance = cosinusDistance(article.embedding, embedding));
 				articles.sort((articleA, articleB) => articleA.distance - articleB.distance);
@@ -214,7 +281,7 @@
 					const afterEl = document.querySelector('.answer');
 					afterEl.parentNode.insertBefore(el, afterEl);
 
-					const response = await fetch("https://api.openai.com/v1/completions", {
+					const sourceResponse = await fetch("https://api.openai.com/v1/completions", {
 						method: "POST",
 						headers: {
 							'Content-Type': "application/json",
@@ -224,12 +291,12 @@
 							model: "gpt-3.5-turbo-instruct",
 							temperature: 0,
 							max_tokens: 2048,
-							prompt: `Schreib eine maximal 300 Zeichen Zusammenfassung des Artikels in Bezug auf die folgende Frage.\n """${question}""\n\nArtikel:\n ${article.body}`
+							prompt: `Schreib eine maximal 300 Zeichen Zusammenfassung des Artikels in Bezug auf die folgende Frage. Schreibe die Zusammenfassung in direkter Rede.\n """${question}""\n\nArtikel:\n ${article.body}`
 						}),
 					});
 
-					if (response.ok) {
-						const data = await response.json();
+					if (sourceResponse.ok) {
+						const data = await sourceResponse.json();
 						el.firstChild.firstChild.firstChild.innerHTML += `<div class="summary">${data.choices[0].text}<div>`;
 					}
 				});
@@ -248,7 +315,7 @@
 				});
 				messages.push({ 'role': 'user', 'content': userPrompt })
 
-				const response = await fetch("https://api.openai.com/v1/chat/completions", {
+				const answerResponse = await fetch("https://api.openai.com/v1/chat/completions", {
 					method: "POST",
 					headers: {
 						'Content-Type': "application/json",
@@ -262,7 +329,7 @@
 					}),
 				});
 
-				const reader = response.body.pipeThrough(new TextDecoderStream()).getReader();
+				const reader = answerResponse.body.pipeThrough(new TextDecoderStream()).getReader();
 
 				let answer = '';
 				document.querySelector('.answer').style.display = 'block';
@@ -273,8 +340,11 @@
 						if (line.startsWith('data:') && line !== 'data: [DONE]') {
 							try {
 								const data = JSON.parse(line.substring(5).trim());
-								answer += data.choices[0].delta.content;
-								document.querySelector('.answer .content').innerHTML = answer;
+								const delta = data.choices[0].delta.content;
+								if (delta) {
+									answer += data.choices[0].delta.content;
+									document.querySelector('.answer .content').innerHTML = answer;
+								}
 							} catch (error) {
 								console.error(error, line);
 							}
